metadata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: otus
spec:
  selector:
    app: hello-py-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: web
  type: NodePort
