metadata/ingress-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rewrite
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - path: /otusapp/michael(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: hello-service
              port:
                number: 9000
